# icu-mortality-prediction

./: README.md
MiniProject/: pyproject.toml
MiniProject/src/icu_mortality/: __init__.py  main.py
