[project]
name = "icu-mortality-prediction"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.23",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.44",
    "kagglehub>=0.2"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
